# eris

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py  valgrind.supp
cmake/: coverage.cmake  doxygen.cmake  grpc-stub.cmake  grpc.cmake  logging.cmake  memcheck.cmake  protobuf.cmake  pybind11.cmake  testing.cmake
eris/: client.cc  client.h  coordinator.cc  coordinator.h  pybindings.cc
eris/eris/: client.cc  client.h  coordinator.cc  coordinator.h
eris/erisfl/: utils.cc
eris/util/: networking.cc  util.cc
examples/: client.py  coordinator.py  model.py
examples/regression/: client.py  coordinator.py  run_all.sh
examples/regresssion/: client.py  coordinator.py  run_all.sh
examples/simple/: Dockerfile  client.py  client2.py  coordinator.py  docker-compose.yaml
experiments/: client_datasets_split.py  distribution_time.gp  download_datasets.py  lstm-time-series-pytorch.ipynb  models.py  requirements.txt  run-experiments.sh  test_models_training.ipynb  tests_model_split&reconstruction.ipynb
experiments/data/: client_datasets_split.py  download_datasets.py
experiments/dlk_attacks/: main.py
experiments/eris/: client.py  coordinator.py  kill.sh  run.sh
experiments/eris_llm/: client.py  coordinator.py  run.sh
experiments/fedavg/: client.py  run.sh  server.py  test_metrics_fold_1.npy  test_metrics_fold_2.npy
experiments/fedavg_llm/: client.py  server.py  train_llm_locally.ipynb  trash_llm.ipynb
experiments/plots/: pareto_plot.py  plot_accuracy_priv_leakage.py  plot_accuracy_priv_leakage_single.py  plot_accuracy_priv_leakage_unbiased.py  plot_compression.py  plot_compression_acc.py  plot_data_rec.py  plot_data_rec_bar.py  plot_n_splits.py  plot_relative_privacy.py  plot_weight_distribution.py  scalability.py
experiments/public/: average_results.py  config.py  models.py  utils.py
experiments/soterafl/: client.py  server.py
experiments/soterafl_llm/: client.py  server.py
experiments_biased_g_estimator/eris_llm/: client.py  run.sh
experiments_biased_g_estimator/fedavg/: client.py  run.sh
experiments_biased_g_estimator/fedavg_llm/: server.py
experiments_biased_g_estimator/public/: config.py
experiments_biased_pareto/eris/: run.sh
experiments_biased_pareto/eris_llm/: run.sh
experiments_biased_pareto/public/: config.py  utils.py
experiments_biased_pareto/soterafl/: run.sh
experiments_pareto/eris/: client_eris.py  coordinator.py  run.sh
experiments_pareto/eris_llm/: client_eris_llm.py
experiments_pareto/fedavg/: client.py  run.sh  server.py
experiments_pareto/fedavg_llm/: client.py
experiments_pareto/public/: config.py  models.py  utils.py
experiments_pareto/soterafl_llm/: run.sh
experiments_temp4/eris/: client_eris4.py  run.sh
experiments_temp4/eris_llm/: client_eris_llm.py
experiments_temp4/fedavg/: run.sh
experiments_temp4/fedavg_llm/: client.py
experiments_temp4/public/: config.py  models.py
experiments_temp4/soterafl_llm/: client.py
experiments_unbiased/eris/: client.py  client_eris.py  run.sh
experiments_unbiased/eris_llm/: client_llm.py  nohup.out  run.sh
experiments_unbiased/fedavg/: client.py  run.sh
experiments_unbiased/fedavg_llm/: client.py  run.sh  train_llm_locally.ipynb  trash_llm_old.ipynb
experiments_unbiased/public/: average_results.py  config.py  models.py  utils.py
experiments_unbiased/soterafl/: client.py  run.sh
experiments_unbiased/soterafl_llm/: client.py
experiments_unbiased_g_estimator/eris/: run.sh
experiments_unbiased_g_estimator/eris_llm/: run.sh
experiments_unbiased_g_estimator/public/: config.py  utils.py
experiments_unbiased_g_estimator/soterafl_llm/: client.py
experiments_unbiased_pareto/: run-experiments.sh
experiments_unbiased_pareto/eris/: client_eris.py  run.sh
experiments_unbiased_pareto/eris_cl/: main.py  run.sh
experiments_unbiased_temp/: distribution_time.gp  requirements.txt
exps_GPT/: average_results.py  cl_training.py  fl_training.py  fl_training_dp.py  fl_training_eris.py  fl_training_pruning.py  fl_training_shatter.py  fl_training_soteriafl.py  local_fl_training.py  local_fl_training_dp.py  local_fl_training_eris.py  local_fl_training_pruning.py  local_fl_training_shatter.py  local_fl_training_soteriafl.py  run.sh  run_shatter.sh  utils.py
exps_dra/: main.py  save_img.py
plots/: plot.py  plot_accuracy_priv_leakage.py  plot_accuracy_priv_leakage_single.py  plot_accuracy_priv_leakage_unbiased.py  plot_accuracy_priv_leakage_unbiased_GPT.py  plot_accuracy_priv_leakage_unbiased_nonIID.py  plot_aggregator_dropout.py  plot_compression.py  plot_compression_acc.py  plot_link_failure.py  plot_n_splits.py  plot_pareto.py  scalability.py
rog_attack/: README.md  main.py  main_val.py  plot_exps.py  prepare_dataset.py  train_post_cifar10.py
src/: CMakeLists.txt  pybindings.cc
src/algorithms/: CMakeLists.txt
src/algorithms/eris/: aggregation_strategy.cc  aggregator.cc  builder.cc  client.cc  config.cc  coordinator.cc  split.cc
src/algorithms/include/algorithms/eris/: aggregation_strategy.h  aggregator.h  builder.h  client.h  config.h  coordinator.h  service.h  split.h
src/include/erisfl/: client.h  coordinator.h
src/proto/: CMakeLists.txt
src/proto/algorithms/eris/: aggregator.proto  client.proto  common.proto  coordinator.proto
src/pybindings/: CMakeLists.txt  bindings.cc
src/util/: CMakeLists.txt  networking.cc
src/util/include/util/: networking.h
test/: CMakeLists.txt
test/algorithms/: CMakeLists.txt  mock_zmq_socket.cc
test/algorithms/eris/: aggregator_builder_test.cc  aggregator_test.cc  client_init_test.cc  client_join_test.cc  client_receive_weights_test.cc  client_test.cc  client_train_test.cc  client_weight_submit_test.cc  coordinator_builder_test.cc  coordinator_config_test.cc  coordinator_test.cc  service_builder_test.cc  service_config_test.cc  split_test.cc  test_runner.cc
test/algorithms/include/: mock_client.h  mock_zmq_socket.h
test/algorithms/include/algorithms/eris/: client_test_helpers.h
tests/: CMakeLists.txt  dummy.cc
(+142 files in other folders)
