[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "eris"
version = "0.0.1"
authors = [
    { name="Dario Fenoglio", email="dario.fenoglio@usi.ch" },
    { name="Pasquale Polverino", email="pasquale.polverino@usi.ch" },
]
description = "Package structure for eris"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = []
